Closed
Bug 1921084
(webgpu-wgsl-features)
Opened 1 year ago
Closed 1 year ago
WGSL features from WGPU are not reported via `GPU.wgslLanguageFeatures`
Categories
(Core :: Graphics: WebGPU, defect, P2)
Core
Graphics: WebGPU
Tracking
()
RESOLVED
FIXED
137 Branch
| Tracking | Status | |
|---|---|---|
| firefox137 | --- | fixed |
People
(Reporter: ErichDonGubler, Assigned: ErichDonGubler)
References
Details
Attachments
(2 files)
Upstream PR: wgpu#6814
Updated•1 year ago
|
No longer blocks: gfx-triage
| Assignee | ||
Updated•1 year ago
|
Blocks: webgpu-triage
| Assignee | ||
Comment 1•1 year ago
|
||
Upstream is making headway at wgpu#6814, so I'll assign this to myself for eventual consumption.
Assignee: nobody → egubler
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•1 year ago
|
||
Upstream has landed this, so we're now waiting on bug 1941540.
No longer blocks: webgpu-triage
Depends on: 1941540
For reference, here are relevant changes in servo: https://github.com/servo/servo/pull/34928/files#diff-491f45ac40238d09e6563487bda0b4648ea7ffcc6b92ea745da911f52c5faa6aR35
| Assignee | ||
Comment 4•1 year ago
|
||
| Assignee | ||
Comment 5•1 year ago
|
||
Updated•1 year ago
|
Attachment #9466988 -
Attachment description: WIP: Bug 1921084 - test(webgpu): adjust seemingly unrelated tier 3 tests → Bug 1921084 - test(webgpu): adjust seemingly unrelated tier 3 tests r=#webgpu-reviewers
Pushed by egubler@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/653f29470788
feat(webgpu): wire up WGPU's WGSL lang. features to DOM r=webgpu-reviewers,teoxoy
https://hg.mozilla.org/integration/autoland/rev/9407bcf1279c
test(webgpu): adjust seemingly unrelated tier 3 tests
Comment 7•1 year ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/653f29470788
https://hg.mozilla.org/mozilla-central/rev/9407bcf1279c
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox137:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•