Bug 1921084 - feat(webgpu): wire up WGPU's WGSL lang. features to DOM r=webgpu-reviewers,teoxoy

Differential Revision: https://phabricator.services.mozilla.com/D237088